Migrate keywords and category to List<String>